fix: update top of divider to -1px for align center

--- a/src/input/styles/input.scss
+++ b/src/input/styles/input.scss
@@ -112,6 +112,7 @@
                 content: ' ';
                 position: absolute;
                 // top: 50%;
+                top: -1px;
                 right: 22px;
                 background: variables.$gray-200;
             }
